@@ -10,6 +10,12 @@ This document contains list of bug fixes and feature additions to Swish-e.
 
 =over 4
 
+=item * Security Fix: swish.cgi
+
+The swish.cgi script was not correctly escaping HTML when searching by 
+the right combination of metanames and highlighting module.  This could
+lead to cross-site scripting if indexing un-trusted documents. [moseley]
+
 =item * Use SWISH::Filter by default with spider.pl
 
 spider.pl is installed in the libexecdir directory as well as the SWISH::Filter modules. 
